//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.foundation;

option java_package = "com.sandpolis.core.foundation";
option optimize_for = CODE_SIZE;

// An enumeration of major OS families.
enum OsType {

    // An OS that could not be identified
    UNKNOWN = 0;

    // An OS based on the Linux kernel
    LINUX = 1;

    // A Windows NT OS
    WINDOWS = 2;

    // A BSD-derived OS based on the XNU kernel
    DARWIN = 3;

    // An OS based on the BSD kernel
    BSD = 6;

    // Solaris
    SOLARIS = 8;

    // Advanced Interactive eXecutive
    AIX = 9;
}
