//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package plugin.shell;

option java_package = "com.sandpolis.plugin.shell";

message RQ_PowerChange {
    enum PowerChange {
        POWEROFF = 0;
        RESTART = 1;
    }

    PowerChange change = 1;
}
